# wizelit-sdk

./: .editorconfig  .env.template  .gitignore  CHANGELOG.md  INITIALIZATION_INSTRUCTION.MD  Makefile  README.md  hatch_build.py  pyproject.toml  pyrightconfig.json
src/: __init__.py  example.py
src/agent_wrapper/: __init__.py  agent_wrapper.py  streaming.py  utils.py
src/models/: base.py
src/wizelit-sdk/: database.py
src/wizelit-sdk/agent_wrapper/: agent_wrapper.py  job.py
src/wizelit-sdk/models/: job.py
src/wizelit_agent_wrapper/: __init__.py  utils.py
src/wizelit_sdk/: __init__.py  database.py  exceptions.py
src/wizelit_sdk/agent_wrapper/: __init__.py  agent_wrapper.py  job.py  signature_validation.py  streaming.py
src/wizelit_sdk/models/: __init__.py  base.py  job.py
tests/: test_agent_wrapper_import.py  test_example.py  test_utils.py
