[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wizelit-sdk"
version = "0.1.4"
description = "Wizelit Agent Wrapper - Internal utility package"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@company.com"}
]
dependencies = [
    # Add your dependencies here
    # "requests>=2.28.0",
    # "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
]

[tool.hatch.build.targets.wheel]
# Packages will be mapped via custom build hook
# All packages under src/ will be automatically mapped to wizelit_sdk namespace
# The hook dynamically discovers and maps all packages using force_include
# No packages listed here - the hook handles everything

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

