[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wizelit-sdk"
version = "0.1.20"
description = "Wizelit Agent Wrapper - Internal utility package"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@company.com"}
]
dependencies = [
    "fastmcp>=0.1.0",
    "SQLAlchemy>=1.4",
    "asyncpg>=0.26.0",
    # streaming support (optional)
    "redis>=4.5.0",
    # typing helpers
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
]

streaming = [
    "redis>=4.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wizelit_sdk"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

